{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "479a0618-8e6e-49fc-8515-f0899219dd53",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "689edd46-1a03-4fdd-b28c-0bf121633a6f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7268d495-6983-4ebf-a6d0-3f5d0d60daef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "9c797111-fcee-484f-aee3-eb058c23d385",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FindPath",
                    "type": "Button",
                    "id": "1f8da190-d89f-42f4-bba0-e05ec94415bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "dropItem",
                    "type": "Button",
                    "id": "950a1f99-02d6-4951-9dd7-8fba9af0d3bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4887f630-b5b1-445c-8fa8-5ba144843c9f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f5bb4a4-58c4-44e6-b701-831846ad5a06",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "2ef72dd3-d695-41a3-b8ff-f7383fa3392e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e0483e51-68e4-46f3-a933-4a338d5609a5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9f1eeb90-c98b-4d4f-b962-d0b3a620eeb0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "40f48b49-c0ab-479d-89c8-d919409e1bed",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7ad8689b-527d-44f5-8794-e5e0d6185f79",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "60c1017c-29c5-4c8f-8ebf-1e504b417436",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FindPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fba4508-12da-4a0d-bce1-f828a44290d3",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "dropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "9a30905d-93d3-4c41-b918-fc2cea629a39",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "fec1d882-2664-44d0-8a15-7eb0ef563fb9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f34b2833-9d38-430f-9279-1eedfd70e5df",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "a7f3bb66-984d-4989-9236-a44aaecd09bc",
            "actions": [
                {
                    "name": "PausedGame",
                    "type": "Button",
                    "id": "76fc4b63-164a-4451-b475-eaaf1376f958",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "d4dd6305-72cc-4807-a0bd-168c7c32f4dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MapSetTarget",
                    "type": "Button",
                    "id": "114b6d29-0aed-4027-9bfe-a0287106d63a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "265bfa74-c1f9-4290-a2ff-d9289c3ded50",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PausedGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23c9f7a7-26b7-4afb-a46c-9e9d182d25d1",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8370f51-c15f-4ce7-9694-134f783d2d8d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapSetTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "16e20e5a-bf0e-4ca7-9c0a-e333433ce855",
            "actions": [
                {
                    "name": "IndexRight",
                    "type": "Button",
                    "id": "ed1aec10-5959-48ec-b9fa-ad7a7fb1bf64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IndexLeft",
                    "type": "Button",
                    "id": "cc138dd6-91f4-4bd5-81bb-5eed1d5bbb60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "4ef517bb-697e-4d8b-ab37-26ff78c8e098",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5174e367-0c5e-490c-b95d-d98b302899d6",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndexRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d193a136-07d0-4a01-a7d0-08ef1861292f",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndexLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fab27b5-6eb2-43d2-93f6-7d04cbd2fc52",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}